vydavatelství & mrtvý slavík

--- a/053 wikidata čištění 2.ipynb
+++ b/053 wikidata čištění 2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 3,
    "id": "5f9e73ad",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 4,
    "id": "842c4314",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 5,
    "id": "c6320fe3",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 6,
    "id": "ca8be151",
    "metadata": {},
    "outputs": [],
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 7,
    "id": "6130b6a3",
    "metadata": {},
    "outputs": [
@@ -59,37 +59,37 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_30120\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['vyplneno'] = len(df.explode(s)[~df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_30120\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['nevyplneno'] = len(df.explode(s)[df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_30120\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['vyplneno'] = len(df.explode(s)[~df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_30120\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['nevyplneno'] = len(df.explode(s)[df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_30120\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['vyplneno'] = len(df.explode(s)[~df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_30120\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['nevyplneno'] = len(df.explode(s)[df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_30120\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['vyplneno'] = len(df.explode(s)[~df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_30120\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['nevyplneno'] = len(df.explode(s)[df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_30120\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['vyplneno'] = len(df.explode(s)[~df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_30120\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['nevyplneno'] = len(df.explode(s)[df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_30120\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['vyplneno'] = len(df.explode(s)[~df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_30120\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['nevyplneno'] = len(df.explode(s)[df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_30120\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['vyplneno'] = len(df.explode(s)[~df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_30120\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['nevyplneno'] = len(df.explode(s)[df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_30120\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:5: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['vyplneno'] = len(df.explode(s)[~df[s].isnull()])\n",
-      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_30120\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
+      "C:\\Users\\micha\\AppData\\Local\\Temp\\ipykernel_10968\\54388433.py:6: UserWarning: Boolean Series key will be reindexed to match DataFrame index.\n",
       "  statka['nevyplneno'] = len(df.explode(s)[df[s].isnull()])\n"
      ]
     },
@@ -337,7 +337,7 @@
        "25  spotify_odberatele         9        1142               9"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 8,
    "id": "c8944913",
    "metadata": {},
    "outputs": [],
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 9,
    "id": "594569ea",
    "metadata": {},
    "outputs": [],
@@ -385,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 10,
    "id": "e4a809e0",
    "metadata": {},
    "outputs": [],
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 11,
    "id": "d9fcda82",
    "metadata": {},
    "outputs": [],
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 12,
    "id": "137dc3fa",
    "metadata": {},
    "outputs": [],
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 13,
    "id": "520c4aa5",
    "metadata": {},
    "outputs": [],
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 14,
    "id": "1779ae4f",
    "metadata": {},
    "outputs": [],
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 15,
    "id": "0b0afeac",
    "metadata": {},
    "outputs": [
@@ -569,7 +569,7 @@
        " 'Atmo Music']"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 16,
    "id": "4ad064c6",
    "metadata": {},
    "outputs": [],
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 17,
    "id": "410751af",
    "metadata": {},
    "outputs": [],
@@ -600,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 18,
    "id": "1592d7bb",
    "metadata": {},
    "outputs": [],
@@ -614,17 +614,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 19,
    "id": "1cffe1a1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = ['konec_pusobeni','zacatek_pusobeni','zalozeni']"
+    "data = ['konec_pusobeni','zacatek_pusobeni','zalozeni','datum_narozeni','datum_umrti']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 20,
    "id": "43ebdfbe",
    "metadata": {},
    "outputs": [],
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 21,
    "id": "5adbc502",
    "metadata": {},
    "outputs": [],
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 22,
    "id": "bffce5dd",
    "metadata": {},
    "outputs": [],
