gender, země původu

--- a/101 explorace CZ - RADIO - TOP 100 + wiki.ipynb
+++ b/101 explorace CZ - RADIO - TOP 100 + wiki.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "id": "102b57e3",
    "metadata": {},
    "outputs": [],
@@ -13,18 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "id": "ddf24cef",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(os.path.join(\"data\",\"CZ_RADIO_TOP_100_tydeni.csv\"))\n",
+    "df = pd.read_csv(os.path.join(\"data\",\"CZ_RADIO_TOP_100_tydenni.csv\"))\n",
     "wikid = pd.read_json(os.path.join(\"wikidata\",\"wikidata.json\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "id": "bac4d5f5",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 6,
    "id": "a54ca0fb",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "id": "c9e60b8f",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
        "<Axes: xlabel='rok'>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 8,
    "id": "f384aeca",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "id": "fc5e9a64",
    "metadata": {},
    "outputs": [
@@ -131,7 +131,7 @@
        "<Axes: xlabel='rok'>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "id": "3a353357",
    "metadata": {},
    "outputs": [
@@ -164,7 +164,7 @@
        "<Axes: xlabel='rok'>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 11,
    "id": "4f4d4781",
    "metadata": {},
    "outputs": [
@@ -219,7 +219,7 @@
        "Name: gender, dtype: object"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 12,
    "id": "7ded7a52",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
        "<Axes: xlabel='rok'>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 13,
    "id": "9ee8630b",
    "metadata": {},
    "outputs": [
@@ -273,7 +273,7 @@
        "<Axes: xlabel='rok'>"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "id": "4ea074ab",
    "metadata": {},
    "outputs": [
@@ -331,7 +331,7 @@
        "<Axes: xlabel='rok'>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "a2eba9bb",
    "metadata": {},
    "outputs": [
@@ -364,7 +364,7 @@
        "<Axes: xlabel='rok'>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -387,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "2f883d1d",
    "metadata": {},
    "outputs": [
@@ -397,7 +397,7 @@
        "<Axes: xlabel='rok'>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "9fddb623",
    "metadata": {},
    "outputs": [
@@ -430,7 +430,7 @@
        "<Axes: xlabel='rok'>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "id": "0383c218",
    "metadata": {},
    "outputs": [
@@ -463,7 +463,7 @@
        "<Axes: xlabel='rok'>"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -486,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "0d9f2349",
    "metadata": {
     "scrolled": false
@@ -498,7 +498,7 @@
        "<Axes: xlabel='rok'>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 20,
    "id": "c78d4716",
    "metadata": {},
    "outputs": [
@@ -531,7 +531,7 @@
        "<Axes: xlabel='rok'>"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 21,
    "id": "693876e0",
    "metadata": {},
    "outputs": [
@@ -564,7 +564,7 @@
        "<Axes: xlabel='rok'>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -587,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 22,
    "id": "38cafa1c",
    "metadata": {},
    "outputs": [
@@ -597,7 +597,7 @@
        "<Axes: xlabel='rok'>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -620,7 +620,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 23,
    "id": "d88400b0",
    "metadata": {},
    "outputs": [
@@ -630,7 +630,7 @@
        "<Axes: xlabel='rok'>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 24,
    "id": "69412150",
    "metadata": {},
    "outputs": [
@@ -663,7 +663,7 @@
        "<Axes: xlabel='rok'>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 25,
    "id": "122df409",
    "metadata": {},
    "outputs": [],
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 26,
    "id": "9cc41c2d",
    "metadata": {},
    "outputs": [
@@ -740,7 +740,7 @@
        "Name: track, dtype: int64"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 27,
    "id": "035e3260",
    "metadata": {},
    "outputs": [],
@@ -761,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 28,
    "id": "2d82796a",
    "metadata": {},
    "outputs": [
@@ -771,7 +771,7 @@
        "<Axes: xlabel='rok'>"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 29,
    "id": "8296c186",
    "metadata": {},
    "outputs": [
@@ -804,7 +804,7 @@
        "<Axes: xlabel='rok'>"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 30,
    "id": "c977a64d",
    "metadata": {},
    "outputs": [
@@ -837,7 +837,7 @@
        "<Axes: xlabel='rok'>"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
