--- a/104 co hrají rádia vs. co lidé streamují a stahují.ipynb
+++ b/104 co hrají rádia vs. co lidé streamují a stahují.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e7fa8fd4",
+   "id": "3379a928",
    "metadata": {},
    "source": [
     "Vytýkám před závorku: streamovací platformy používají typicky mladší lidi, rádio BY MĚLO BÝT PRO VŠECHNY, měli bychom na to při psaní pamatovat."
@@ -10,8 +10,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "id": "370d2ffe",
+   "execution_count": 105,
+   "id": "57f0e052",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,28 +21,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "id": "1c56a996",
+   "execution_count": 106,
+   "id": "da85bd95",
    "metadata": {},
    "outputs": [],
    "source": [
-    "radio = pd.read_csv(os.path.join(\"data\",\"CZ_RADIO_TOP_100_tydeni.csv\"))"
+    "radio = pd.read_csv(os.path.join(\"data\",\"CZ_RADIO_TOP_100_tydenni.csv\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "id": "8b828a09",
+   "execution_count": 107,
+   "id": "47ab4f48",
    "metadata": {},
    "outputs": [],
    "source": [
-    "stream = pd.read_csv(os.path.join(\"data\",\"CZ_SINGLES_DIGITAL_TOP_100_tydeni.csv\"))"
+    "stream = pd.read_csv(os.path.join(\"data\",\"CZ_SINGLES_DIGITAL_TOP_100_tydenni.csv\"))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
-   "id": "0713a6e5",
+   "execution_count": 108,
+   "id": "bddac48c",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "2014"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -62,8 +62,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
-   "id": "c45d10ec",
+   "execution_count": 109,
+   "id": "3c45007b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6af45835",
+   "id": "d68abff9",
    "metadata": {},
    "source": [
     "## Porovnání výskytů interpretů v top 100 rádio vs. stream od roku 2014"
@@ -80,8 +80,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
-   "id": "3f862c8d",
+   "execution_count": 110,
+   "id": "e51c8eca",
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -112,8 +112,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "f10ed2c2",
+   "execution_count": 111,
+   "id": "568c859b",
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +133,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,8 +144,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "id": "876c4f1c",
+   "execution_count": 112,
+   "id": "58f58edb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3d33251",
+   "id": "75d4430d",
    "metadata": {},
    "source": [
     "### Co lidi streamují víc, než dramaturgové nasazují:"
@@ -162,8 +162,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "554d03bf",
+   "execution_count": 113,
+   "id": "f16b5407",
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +198,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 113,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ee317fa",
+   "id": "b69f4791",
    "metadata": {},
    "source": [
     "### Co dramaturgové nasazují víc, než lidi poslouchají:"
@@ -217,8 +217,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "e43f18a4",
+   "execution_count": 114,
+   "id": "4080c37e",
    "metadata": {},
    "outputs": [
     {
@@ -241,10 +241,10 @@
        "Strumbellas              29.000000\n",
        "Junge Junge              26.750000\n",
        "Marek Ztracený           26.451613\n",
+       "Ondřej Brzobohatý        23.000000\n",
        "Martin Solveig           22.666667\n",
        "Nico Santos              21.800000\n",
        "R3Hab                    21.666667\n",
-       "Ondřej Brzobohatý        21.000000\n",
        "James Blunt              20.250000\n",
        "Becky Hill               20.200000\n",
        "Mans Zelmerlöw           18.666667\n",
@@ -253,7 +253,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c863c8d",
+   "id": "837fde50",
    "metadata": {},
    "source": [
     "ZDŮRAZŇUJI: jde o prezenci v top 100, ne poměr real vysílání / streamů. Může být zkreslené, nejde o objektivní pořadí, ale dost to napovídá."
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2b82809",
+   "id": "524f72b3",
    "metadata": {},
    "source": [
     "### Rodíl nasazovanosti x streamovanosti žánrů"
@@ -280,8 +280,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "79904f1f",
+   "execution_count": 115,
+   "id": "eb33b08e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -290,8 +290,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "4614722e",
+   "execution_count": 116,
+   "id": "a5bc096a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -300,8 +300,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "id": "09e5adc8",
+   "execution_count": 117,
+   "id": "0fd80db3",
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
        "Name: nasazovanost, dtype: float64"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,8 +352,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
-   "id": "8678f083",
+   "execution_count": 118,
+   "id": "1d561970",
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
        "Name: nasazovanost, dtype: float64"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3dcbc30b",
+   "id": "169d4bc4",
    "metadata": {},
    "source": [
     "Zase: metodologicky je to ošementý, ale obrázek to dělá moc hezkej."
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b66538dc",
+   "id": "11d8df11",
    "metadata": {},
    "source": [
     "### Co lidi streamují, ale od roku 2014 nebylo v rádových TOP 100:"
@@ -420,8 +420,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "2b5e1db0",
+   "execution_count": 119,
+   "id": "58f94d50",
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +491,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "214d8a5e",
+   "id": "4d6e9d89",
    "metadata": {},
    "source": [
     "DOPÍČI NEMŮŽU UVĚŘIT ŽE TOTO NENÍ CHYBA"
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fbb1ef04",
+   "id": "c7a464bd",
    "metadata": {},
    "source": [
     "## Potenciální námět na domácí úkol: vydestilovat ze všech žánrů pár základních"
@@ -520,8 +520,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
-   "id": "ad0735b9",
+   "execution_count": 120,
+   "id": "874e438e",
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
        "309"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,8 +541,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
-   "id": "70d2e31d",
+   "execution_count": 121,
+   "id": "00e893a0",
    "metadata": {},
    "outputs": [
     {
@@ -859,7 +859,7 @@
        " 'lidová píseň']"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
