žánry, místo původu

--- a/107 CZ100RADIO x místo původu.ipynb
+++ b/107 CZ100RADIO x místo původu.ipynb
@@ -1,9 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "960dc12e",
+   "metadata": {},
+   "source": [
+    "Todo:\n",
+    "- Kolik zahraničních a kolik českých jmen se ve zkoumaným období protočilo v rádiích (tipuju že českých bude výrazně míň > z českých imho točíme dokola léta ta samá jména jen třeba s novýma písničkama)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7ee4fd2c",
+   "id": "d30a2642",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d7d48d17",
+   "id": "20cb7721",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b820f1f6",
+   "id": "58baa941",
    "metadata": {},
    "source": [
     "## Co v těch datech vlastně máme"
@@ -34,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a6e600ad",
+   "id": "7fea7f98",
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c3c23deb",
+   "id": "d07137d0",
    "metadata": {},
    "outputs": [
     {
@@ -163,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e682d391",
+   "id": "96fe49e5",
    "metadata": {},
    "source": [
     "To je slušný."
@@ -171,7 +180,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eba7393f",
+   "id": "0c895ea1",
    "metadata": {},
    "source": [
     "## Nejzastoupenější země"
@@ -180,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c9105c3a",
+   "id": "860864c4",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +231,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "c45612e5",
+   "id": "99d28369",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -233,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "828f0966",
+   "id": "38b7a623",
    "metadata": {},
    "outputs": [
     {
@@ -266,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "de071d86",
+   "id": "5bc9eb13",
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +308,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "2aadeadb",
+   "id": "0d3bfce0",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +341,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "3b9199d2",
+   "id": "fd6cd048",
    "metadata": {
     "scrolled": true
    },
@@ -367,7 +376,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "087aa077",
+   "id": "6e124bab",
    "metadata": {},
    "outputs": [
     {
@@ -400,7 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "a4ae8d55",
+   "id": "78d72221",
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +442,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "dc802257",
+   "id": "bbf32a4c",
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +474,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a963112d",
+   "id": "86a46636",
    "metadata": {},
    "source": [
     "## Versus žánry"
@@ -473,7 +482,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8333785c",
+   "id": "be16001b",
    "metadata": {},
    "source": [
     "to-do"
